--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario.html
@@ -1,132 +1,49 @@
-<!DOCTYPE html>
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <title>Calendario| Citas</title>
-    <link rel="icon" href="favicon.ico" size="32x32" >
-    {%load static%}
+{%extends 'panel_control/base.html'%}  
+{% comment %} <!--CSS propio de Gestion de Usuario-->
+<link rel="stylesheet" href= "{% static 'estilo.css'%}"> {% endcomment %}
 
-    <link rel="stylesheet" href="{% static 'css/lib/datatable/dataTables.bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'fullcalendar/lib/main.css' %}">
-{% comment %} 
-    <link rel="stylesheet" href="{% static 'css/calendar.css' %}"> {% endcomment %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      
-    <!--es para los iconos-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+{%load static%}
+
+
+{% block javascripts%}
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+     
+
+{%endblock%}
+<!--Cuadro de DIALOGO DE ELIMINAR-->
+
+
+
+{%block content%}
   
 
-
-<body>
-
- <header>
-      <!--Barra de inicio-->
-      <div class="container">
-            <!-- Mensajes de informaciones-->
-          {% comment %} <div class="nav row rounded-top align-items-center justify-content-between bg-info text-dark">  {% endcomment %}
-              <div class="alert alert-light align-items-center justify-content-between" role="alert">
-                  {% if messages %}
-                            <ul class="messages">
-                                {% for message in messages %}
-                                <li>
-                                    {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %} 
-                                    {% endif %}
-                                    {{ message }}
-                                </li>
-                                {% endfor %}
-                            </ul>
-                    {% endif %}
-              </div> 
-
-                          <!--Inicio de SESION PANEL-->
-            <nav class="navbar navbar-expand-sm bg-transparent navbar-transparent justify-content-end logo ">
-              <i class="bi bi-person-check-fill "> 
-                <a class="navbar-brand nombre" > 
-                  Bienvenido  <FONT COLOR="blue">{{user.usuario}}</FONT>
-                </a>
-              </i>
-                <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-                    <ul class="navbar-nav text-right">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="#"></a>
-                        </li>
-                        
-                        <li class="nav-item active">
-                            <a class="cerrar" href="/cerrar_sesion" data-toggle="tooltip" title="Cerrar Sesion"> 
-                              <img src="{% static 'img/apagar.png' %}" width="30px" alt="auto">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <!--======================================BARRA NAVBAR=======================================================-->
-
-            <center> 
-                <a class="nav-link" class="c-1 d-flex align-items-center" aria-current="page" href=" /panel_control/inicio/"  data-toggle="tooltip" title="Página principal">
-                                  <FONT COLOR="black" style="font-size: 1.8rem" >ＳｍｉｌｅＳｏｆｔ</FONT> 
-                                  <img src="{% static 'img/favicon.png' %}" width="90px" alt="logo">
+{%if perms.gestion_agendamiento.view_cita%}
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <center> 
+                    <strong  style="color:blue; font-size:16px;" >
+                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> ¡Gracias por la preferencia! </h2>                                       
+                    </strong>
+                  
+                </center>
+              <br>
+               <table  align="center" >
+                        <tr>
+                        <td>
+                           
+                            {%if perms.gestion_agendamiento.view_cita%}
+                                <a href="/agendamiento/calendar" class="btn btn-info">
+                                    <i class="bi bi-calendar"></i>
+                                   Ver Calendario <br>
                                 </a>
-            </center> 
-            
-         
-           <br> 
-    </div>
- </header> 
-
-
-  <!--*********************************************************************************************************-->
-    {%if perms.gestion_agendamiento.view_cita%}
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                        <center> 
-                            
-                            <h2 <i class="bi bi-calendar"></i> Calendario</i> </h2>
-                        </center>
-                    
-                    
-                </div>
-
-                  <!--Calendario-->
-                    <hr>
-                    <div id="calendar" class="container" style="padding: 20px;">
-
-                    </div>
-
+                                {%endif%}
+                        </td>
+                        </tr>
+                </table>
             </div>
-                
         </div>
-        {% endif %}
-
-    <!--Script para el Calendario-->
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <script src="{% static 'js/lib/data-table/dataTables.bootstrap.min.js' %}"></script>
-    <script src="{% static 'fullcalendar/lib/main.js' %}"></script>
-    <script src="{% static 'fullcalendar/lib/locales-all.js' %}"></script>
-   <!--Scrip de los EVENTOS DE LAS CITAS DEL Calendario-->
-    <script>
-        document.addEventListener('DOMContentLoaded', function(){
-            var calendarUI = document.getElementById('calendar');
-            var calendar = new FullCalendar.Calendar(calendarUI,{
-                {% comment %} headerToolbar: {
-                    left: 'prev,next today',
-                    center: 'title',
-                }, {% endcomment %}
-                events: [
-                    {% for cita in object_list %}
-                        {
-                            title: "Cita| {{ cita.tratamiento_solicitado }}",
-                            start: '{{ cita.fecha | date:"Y-m-d" }}',
-                           {% comment %}  end: '{{ reserva.fecha_vencimiento | date:"Y-m-d" }}', {% endcomment %}
-                        },
-                    {% endfor %}
-                ]
-            });
-            calendar.render();
-            calendar.setOption('locale','es');
-        });
-    </script>
-
- </body>
-</html>  
+            
+    </div>
+    {% endif %}
+{%endblock%}
