--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -17,7 +17,7 @@
 {%block content%}
   
 
-{%if perms.webapp.view_usuario%}
+{%if perms.gestion_agendamiento.view_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
