--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -30,7 +30,7 @@
         .transformacion3 { text-transform: lowercase;}   
       </style>
 </head>
-
+{{paciente}}
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'js/eliminar.js'%}"></script>
@@ -260,9 +260,14 @@
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Citas </li></a>
                                                   {% endif %}
-                                                    {%if perms.gestion_agendamiento.view_cita%}
+                                                  {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/pacientes_cita">• Listado | Reservar una cita</li></a>
                                                   {% endif %}
+                                                  {%if perms.gestion_agendamiento.add_cita%}
+                                                  <li><a class="dropdown-item" href="/agendamiento/usuario_addCita/{{user.numero_documento}}">• Agendar una cita </li></a>
+                                                  {% endif %}
+                         
+                                                  
                                                 </ul>
                                             </li>
  <!--COMENTADO POR DESARROLOO**********************************-->
