--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -74,6 +74,7 @@
                                         <th>Fecha de Agendamiento</th>
                                         <th>Hora de Agendamiento</th>
                                         <th>Tratamiento Solicitado</th>
+                                        <th>Profesional</th>
                                         <th colspan="2">Acciones </th> 
                                     </tr>
                                 </thead>
@@ -89,6 +90,7 @@
                                             <td >{{c.fecha}}</td>
                                             <td >{{c.hora}}</td>
                                             <td >{{c.tratamiento_solicitado}}</td>
+                                            <td >{{c.profesional}}</td>
                                             {{busqueda}}
                                             <!--OPCIONES Modificar y Eliminar-->
                                                 <td>
