--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -56,7 +56,13 @@
                            <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
                             {{form.hora}}
                         </div> 
+                         <br>
+                        <div class="form-group">
+                          <label for="profesional"> Elegir al Profesional: </label> 
+                            {{form.profesional}}
+                        </div>
                     </div>
+                   
 
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
