--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
@@ -52,7 +52,12 @@
                            <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
                             {{form.hora}}
                         </div> 
-                     
+                       <br>
+                        <div class="form-group">
+                          <label for="profesional"> Elegir al Profesional: </label> 
+                            {{form.profesional}}
+                        </div>
+                    </div>
                       
                     </div>
 
