cambios en modificar cita

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
@@ -15,71 +15,113 @@
 
 
 {%block content%}
-  
+{% comment %} {%if request.cita.id_cita is cita.id_cita%} {% endcomment %}
+{% comment %}   
+{% if request.user%} {% endcomment %}
+{% comment %} {% if user.is_authenticated %} Hello, {{ user.usuario }}.{% endif %} {% endcomment %}
+{{cita}}
+{% comment %} {% ifequal request.cita.id_cita 'cita.id_cita' %}  {% endcomment %}
+{%if id_cita == request.GET%}
+    {%if perms.gestion_agendamiento.change_cita%}
+            <div class="container">
+                <div class="card">
+                    <div class="card-body">
+                        <center> 
+                                
+                            <h2 <i class="bi bi-calendar"></i> Cita</i> </h2>
+                        </center>
+                    <br>
+                    <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}} </i> </h5></center>
 
-{%if perms.gestion_agendamiento.change_cita%}
-    <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <center> 
-                        
-                    <h2 <i class="bi bi-calendar"></i> Agregar Cita</i> </h2>
-                </center>
-              <br>
-               <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}} </i> </h5></center>
+                        <form method="POST" id="group_form" novalidate="">
+                            {%csrf_token%}
+                            <div style="margin: 20px;" >
+                                <br>
+                                <div class="form-group">
+                                    <label for="tratamiento_solicitado"> Motivo de Consulta</label>
+                                        {{form.tratamiento_solicitado}} <br>
+                                </div>
+                                <br>
+                                <div class="form-group">
+                                <label for="{{form.fecha.name}}">{{form.fecha.label}}</label>
+                                    {{form.fecha}}
+                                </div>
 
-                <form method="POST" id="group_form" novalidate="">
-                    {%csrf_token%}
-                        {%if mensaje%}
-                            <div class="alert alert-success" role="alert">
-                                  ✅ Cita registrada
+                                <br>
+                                <div class="form-group">
+                                <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
+                                    {{form.hora}}
+                                </div> 
+                            <br>
+                                <div class="form-group">
+                                <label for="profesional"> Elegir al Profesional: </label> 
+                                    {{form.profesional}}
+                                </div>
                             </div>
-                            {%endif%}
-                    <div style="margin: 20px;" >
-                        <br>
-                        <div class="form-group">
-                            <label for="tratamiento_solicitado"> Motivo de Consulta</label>
-                                {{form.tratamiento_solicitado}} <br>
-                        </div>
-                        <br>
-                        <div class="form-group">
-                           <label for="{{form.fecha.name}}">{{form.fecha.label}}</label>
-                            {{form.fecha}}
-                        </div>
+                            
+                            </div>
 
-                        <br>
-                        <div class="form-group">
-                           <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
-                            {{form.hora}}
-                        </div> 
-                       <br>
-                        <div class="form-group">
-                          <label for="profesional"> Elegir al Profesional: </label> 
-                            {{form.profesional}}
-                        </div>
+                            <div class="d-flex justify-content-center">
+                                <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                                    <i class="bi-save"></i>
+                                Modificar y Guardar
+                                </button>
+                                {% comment %} {%if listado_citas%}
+                                    {% for cita in  listado_citas  %}
+                                        <a href="/agendamiento/eliminar_cita/{{cita.id_cita}}" class="btn btn-danger btnEliminacion">
+                                                                    <i class="bi-trash-fill" ></i>
+                                                                    Eliminar
+                                                                </a> 
+                                    {%endfor%}
+                                {%endif%} {% endcomment %}
+                            {% comment %} <a href="/agendamiento/deletecita/{{cita.id_cita}}" class="btn btn-danger btnEliminacion">
+                                                                    <i class="bi-trash-fill" ></i>
+                                                                    Eliminar
+                                                                </a>  {% endcomment %}
+                                {% comment %} <div id="eliminarcita">
+                                    Eliminar</div>
+                                <input type = button onclick = "removea_click ()" value = "remove" />
+                                <script> function removea_click () 
+                                    {document.getElementById ('eliminarcita'). onclick = ""; alert ("eliminado con éxito")} 
+                                </ script>
+                            
+                            </div> {% endcomment %}
+                            <div class="d-flex justify-content-center">
+                                <button class="btn btn-danger btnEliminacion" type="submit" style="margin: 10px;">
+                                <i class="bi-trash-fill" ></i>
+                                Eliminar
+                                </button>
+                            <script>
+                                function cancelar() {
+                                    Swal.fire({
+                                        icon: 'warning',
+                                        title: 'Esta eliminando este usuario',
+                                        footer: '<a href="/eliminar_usuario/{{c.}}">¡Da click aqui !</a>'
+                                    })
+                                }
+                            </script>
+                            <hr>
+                        
+                        </form>
+
+
+
                     </div>
-                      
-                    </div>
-
-                    <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit" style="margin: 10px;">
-                            <i class="bi-save"></i>
-                            Guardar
-                        </button>
-                        <a href="/agendamiento/agregar_cita/ " class="btn btn-danger" style="margin: 10px;">
-                            <i class="bi-x-circle"></i>
-                            Cancelar
-                        </a>
-                    </div>
-                    <hr>
-                   
-                </form>
-
-
-
+                </div>
+                    
             </div>
-        </div>
-            
-    </div>
-    {% endif %}
+        {% endif %}    
+    {% else %}
+            <br>
+            <h2>
+                <center>
+                    No tiene permisos para ingresar a esta sección
+                    <img src="{% static 'img/restringir.png' %}" width="100px" alt="logo">
+                </center> 
+            </h2>
+            <br>
+       
+    {% comment %} {% endifequal %} {% endcomment %}
+    {%endif%}
+  
 {%endblock%}
