--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
@@ -18,7 +18,7 @@
 
 
 <body>
-
+{{cita}}
  <header>
       <!--Barra de inicio-->
       <div class="container">
@@ -97,12 +97,12 @@
                                  {% endcomment %}
                             </td>
                             <td>
-                                        {% comment %} {%if perms.gestion_agendamiento.change_cita%}
-                                        <a href="/agendamiento/modificar_cita/{{paciente.numero_documento}} " class="btn btn-info">
+                                     {%if perms.gestion_agendamiento.change_cita%}
+                                        <a href="/agendamiento/usuario_changeCita/{{user.numero_documento}} " class="btn btn-info">
                                         <i class="bi-pencil-square"></i>
                                             Editar cita
                                         </a>
-                                        {%endif%} {% endcomment %}
+                                        {%endif%} 
                                     </td>
                                     <td>
                                         {% comment %} {%if perms..gestion_agendamiento.delete_cita%}
@@ -148,11 +148,22 @@
                         {
                             title: "{{ cita.hora}} hs| {{ cita.tratamiento_solicitado }}",
                             start: '{{ cita.fecha | date:"Y-m-d" }}',
-                        
+                            url: '/agendamiento/usuario_changeCita/'+'{{ cita.id_cita }}'
                            {% comment %}  end: '{{ reserva.fecha_vencimiento | date:"Y-m-d" }}', {% endcomment %}
                         },
                     {% endfor %}
-                ]
+                ],
+               
+                eventClick: function(event) {
+                if (event.url){
+                    window.open(event.url, "_blank");
+                    return false;
+                }
+            },
+
+            height: 650,
+               
+
             });
             calendar.render();
             calendar.setOption('locale','es');
