--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -30,7 +30,7 @@
         .transformacion3 { text-transform: lowercase;}   
       </style>
 </head>
-{{paciente}}
+
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'js/eliminar.js'%}"></script>
@@ -257,9 +257,13 @@
                                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                   <!--Opcion 6.1 -->
       
-                                                  <li><a class="dropdown-item" href="/agendamiento/calendar"><strong  style="color:blue; font-size:16px;" >
+                                                  <li><a class="dropdown-item" href="/agendamiento/calendar">
+                                                    <strong  style="color:blue; font-size:16px;" >
                                                            • Calendario
-                                                              </strong></li></a>
+                                                    </strong></li></a>
+                                                  {%if perms.gestion_agendamiento.view_cita%}
+                                                  <li><a class="dropdown-item" href="/agendamiento/mis_citas/{{user.numero_documento}}">• Mis Citas </li></a>
+                                                  {% endif %}      
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Citas </li></a>
                                                   {% endif %}
