--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
@@ -19,9 +19,15 @@
 {% comment %}   
 {% if request.user%} {% endcomment %}
 {% comment %} {% if user.is_authenticated %} Hello, {{ user.usuario }}.{% endif %} {% endcomment %}
-{{cita}}
-{% comment %} {% ifequal request.cita.id_cita 'cita.id_cita' %}  {% endcomment %}
-{%if id_cita == request.GET%}
+{% comment %} {{cita}}
+{{id_cita }}
+<br>
+<b>Aqui va el que trae </b>
+var id = ;
+while ({{id_cita}}={{id_cita}}) {     
+  {% endcomment %}
+{% comment %} {% ifequal request.id_cita 'id_cita' %}   {% endcomment %}
+{% comment %} {%if request.id_cita is id_cita %} {% endcomment %}
     {%if perms.gestion_agendamiento.change_cita%}
             <div class="container">
                 <div class="card">
@@ -34,9 +40,12 @@
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}} </i> </h5></center>
 
                         <form method="POST" id="group_form" novalidate="">
+                           
                             {%csrf_token%}
+                       
                             <div style="margin: 20px;" >
                                 <br>
+                               
                                 <div class="form-group">
                                     <label for="tratamiento_solicitado"> Motivo de Consulta</label>
                                         {{form.tratamiento_solicitado}} <br>
@@ -66,14 +75,12 @@
                                     <i class="bi-save"></i>
                                 Modificar y Guardar
                                 </button>
-                                {% comment %} {%if listado_citas%}
-                                    {% for cita in  listado_citas  %}
-                                        <a href="/agendamiento/eliminar_cita/{{cita.id_cita}}" class="btn btn-danger btnEliminacion">
-                                                                    <i class="bi-trash-fill" ></i>
-                                                                    Eliminar
-                                                                </a> 
-                                    {%endfor%}
-                                {%endif%} {% endcomment %}
+                               
+                                <a style="margin: 10px;" href="/agendamiento/delete_cita/{{id_cita}}" class="btn btn-danger btnEliminacion">
+                                    <i class="bi-trash-fill" ></i>
+                                    Eliminar
+                                </a>
+                                                             
                             {% comment %} <a href="/agendamiento/deletecita/{{cita.id_cita}}" class="btn btn-danger btnEliminacion">
                                                                     <i class="bi-trash-fill" ></i>
                                                                     Eliminar
@@ -86,7 +93,7 @@
                                 </ script>
                             
                             </div> {% endcomment %}
-                            <div class="d-flex justify-content-center">
+                            {% comment %} <div class="d-flex justify-content-center">
                                 <button class="btn btn-danger btnEliminacion" type="submit" style="margin: 10px;">
                                 <i class="bi-trash-fill" ></i>
                                 Eliminar
@@ -96,10 +103,10 @@
                                     Swal.fire({
                                         icon: 'warning',
                                         title: 'Esta eliminando este usuario',
-                                        footer: '<a href="/eliminar_usuario/{{c.}}">¡Da click aqui !</a>'
+                                        footer: '<a href="/eliminar_usuario/{{id_cita}}">¡Da click aqui !</a>'
                                     })
                                 }
-                            </script>
+                            </script> {% endcomment %}
                             <hr>
                         
                         </form>
@@ -110,8 +117,10 @@
                 </div>
                     
             </div>
-        {% endif %}    
-    {% else %}
+        {% endif %}   
+        </div> 
+    
+    {% comment %} {% else %}
             <br>
             <h2>
                 <center>
@@ -119,9 +128,8 @@
                     <img src="{% static 'img/restringir.png' %}" width="100px" alt="logo">
                 </center> 
             </h2>
-            <br>
-       
-    {% comment %} {% endifequal %} {% endcomment %}
-    {%endif%}
-  
+            <br>  {% endcomment %}
+{% comment %}        
+     {% endifequal %}  {% endcomment %}
+     {% comment %} {%endif%}  {% endcomment %}
 {%endblock%}
