--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -261,9 +261,9 @@
                                                     <strong  style="color:blue; font-size:16px;" >
                                                            • Calendario
                                                     </strong></li></a>
-                                                  {%if perms.gestion_agendamiento.view_cita%}
+                                                  {% comment %} {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/mis_citas/{{user.numero_documento}}">• Mis Citas </li></a>
-                                                  {% endif %}      
+                                                  {% endif %}       {% endcomment %}
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Citas </li></a>
                                                   {% endif %}
