Implementacion de listado de Tratamientos pendientes
-Ya muestra los tratamientos que estan pendientes de ser realizados pero que ya fueron pagados por el paciente

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -246,7 +246,7 @@
                                                     </li> 
                                                   {%endif%}
                                                   <li>
-                                                    <a class="dropdown-item" href="#">• Tratamientos pendientes</a>
+                                                    <a class="dropdown-item" href="/tratamiento/listar_tratamientos_pendientes/">• Tratamientos pendientes</a>
                                                   </li>
                                                 </ul>
                                               </li>
