cambios en listado de citas

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -88,7 +88,7 @@
                                             <td >{{c.nombre_paciente}}</td>
                                             <td >{{c.paciente }}</td>
                                             <td >{{c.fecha}}</td>
-                                            <td >{{c.hora}}</td>
+                                            <td >{{c.hora}} hs.</td>
                                             <td >{{c.tratamiento_solicitado}}</td>
                                             <td >{{c.profesional}}</td>
                                             {{busqueda}}
