--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
@@ -14,74 +14,87 @@
 {%endif%}
 <!--Para comprobar si el usuario tiene algún permiso para esa app
 -->
-<div class="row">
-    <div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
-            <br>                 
-            <center><h4>Ingrese su antecedente clinico</h4></center>
-        </div>
- <br>
-           <form method="POST">
-                            {%csrf_token%}
-                            {%if menssage%}
-                            <div class="alert alert-success" role="alert">
-                                  ✅ Modificado Correctamente
-                            </div>
-                            {%endif%}
-         <!--2 CARD-->
-        
-                            <div class="form-group">
-                                <label for="{{form.grupo_sanguineo.name}}">{{form.grupo_sanguineo.label}}</label>
-                                {{form.grupo_sanguineo}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.enfermedad_base.name}}">{{form.enfermedad_base.label}}</label>
-                                {{form.enfermedad_base}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.alergia.name}}">{{form.alergia.label}}</label>
-                                {{form.alergia}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.intolerancia_anestecia.name}}">{{form.intolerancia_anestecia.label}}</label>
-                                {{form.intolerancia_anestecia}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.frecuencia_higiene_bucal.name}}">{{form.frecuencia_higiene_bucal.label}}</label>
-                                {{form.frecuencia_higiene_bucal}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.medicamento.name}}">{{form.medicamento.label}}</label>
-                                {{form.medicamento}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.cirugias.name}}">{{form.cirugias.label}}</label>
-                                {{form.cirugias}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.caries.name}}">{{form.caries.label}}</label>
-                                {{form.caries}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.afeccion_cronica_familiar.name}}">{{form.afeccion_cronica_familiar.label}}</label>
-                                {{form.afeccion_cronica_familiar}}
-                            </div>
-                            <br>
-                
+    {% comment %} {%if perms.gestion_adminstrativo.change_paciente%} {% endcomment %}
+        <div class="row">
+            <div class="col-12 col-md-6 offset-md-3">
+                <div class="card">
+                    <br>                 
+                    <center><h4>Ingrese su antecedente clinico</h4></center>
+                </div>
         <br>
-        <hr>
-             <div class="d-flex justify-content-center">
+                <form method="POST">
+                    {%csrf_token%}
+                    {%if menssage%}
+                    <div class="alert alert-success" role="alert">
+                            ✅ Modificado Correctamente
+                    </div>
+                    {%endif%}
+                <!--2 CARD-->
+                
+                    <div class="form-group">
+                        <label for="{{form.grupo_sanguineo.name}}">{{form.grupo_sanguineo.label}}</label>
+                        {{form.grupo_sanguineo}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.enfermedad_base.name}}">{{form.enfermedad_base.label}}</label>
+                        {{form.enfermedad_base}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.alergia.name}}">{{form.alergia.label}}</label>
+                        {{form.alergia}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.intolerancia_anestecia.name}}">{{form.intolerancia_anestecia.label}}</label>
+                        {{form.intolerancia_anestecia}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.frecuencia_higiene_bucal.name}}">{{form.frecuencia_higiene_bucal.label}}</label>
+                        {{form.frecuencia_higiene_bucal}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.medicamento.name}}">{{form.medicamento.label}}</label>
+                        {{form.medicamento}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.cirugias.name}}">{{form.cirugias.label}}</label>
+                        {{form.cirugias}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.caries.name}}">{{form.caries.label}}</label>
+                        {{form.caries}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.afeccion_cronica_familiar.name}}">{{form.afeccion_cronica_familiar.label}}</label>
+                        {{form.afeccion_cronica_familiar}}
+                    </div>
+                    <br>
+        
+                    <br>
+                        <hr>
+                    <div class="d-flex justify-content-center">
                         <button class="btn btn-success" type="submit" style="margin: 10px;">Guardar</button>
                         <a href=" /panel_control/inicio/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
                     </div>
-                </div>
+            </div>
             </form>
+        </div>
+    {% comment %} {% else %}
+                    <br>
+                    <h2>
+                        <center>
+                            No tiene permisos para ingresar a esta sección 
+                            <img src="{% static 'img/restringir.png' %}" width="100px" alt="logo">
+                        </center> 
+                    </h2>
+                    <br>  
+    {%endif%} {% endcomment %}
+
 {%endblock%}
