cambios en cita

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -261,7 +261,7 @@
                                                            • Calendario
                                                     </strong></li></a>
                                                   {%if perms.gestion_agendamiento.view_cita%}
-                                                  <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Citas </li></a>
+                                                  <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Reservaciones de citas </li></a>
                                                   {% endif %}
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/pacientes_cita">• Listado | Reservar una cita</li></a>
