Implementacion inconclusa del boton confirmar en Tratamientos pendientes

--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -44,7 +44,7 @@
                                             <!-- {%if perms.gestion_tratamiento.delete_tratamiento%} -->
                                                 <td>
                                                     <!-- <a href="/tratamiento/realizar_pregunta/{t.id}" class="btn btn-success"> -->
-                                                    <a href="#" class="btn btn-success">
+                                                    <a href="/tratamiento/realizar_pregunta/{{t.id_tratamiento}}" class="btn btn-success">
                                                         <i class="bi bi-check2-circle" ></i> 
                                                         Confirmar
                                                     </a>
