--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/mostrar_mensaje_confirmacion.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/mostrar_mensaje_confirmacion.html
@@ -4,9 +4,9 @@
 <form method="post">
 	{% csrf_token %}
     <center>
-        {% if object %}
+        {% if id_tratamiento %}
             <h3>¿Estas seguro confirmar la realización de este tratamiento?</h3>
-            <a class="btn btn-primary" href ="/tratamiento/confirmar_tratamiento/">Sí</a>
+            <a class="btn btn-primary" href ="/tratamiento/confirmar_tratamiento/{{id_tratamiento}}">Sí</a>
             <a class= "btn btn-danger" href="/tratamiento/listar_tratamientos_pendientes/">Cancelar</a>
         {% endif %}
     </center>
