Correcciones varias en gestion de tratamiento

--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
@@ -43,11 +43,11 @@
 							<i class="bi-pencil-square"></i>
 							Asignar Tratamiento
 						</a> -->
-						<a class="btn btn-primary" href="/administrativo/modificar_tratamiento_asignado/{{ paciente.id_paciente }}">
+						<a class="btn btn-primary" href="/tratamiento/asignar_tratamientos/{{ paciente.id_paciente }}">
 							<i class="bi-pencil-square"></i>
 							Asignar Tratamientos
 						</a>
-						<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.numero_documento}}">
+						<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.id_paciente}}">
 							<i class="bi-eye-fill"></i>
 							Tratamientos asignados
 						</a>
