--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -22,7 +22,7 @@
                 </center>
                     <center>
                         <h4>
-                            <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i>
+                            <b>Paciente:</b> <i>{{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}</i>
                         </h4>
                     </center>
 
@@ -52,7 +52,7 @@
                                             <!-- Eliminar-->
                                             {%if perms.gestion_tratamiento.delete_tratamiento%}
                                                 <td>
-                                                    <a href="/tratamiento/eliminar_tratamiento_asignado/{{id_paciente_tratamiento}}/{{persona.numero_documento}}" class="btn btn-danger btnEliminacion">
+                                                    <a href="/tratamiento/eliminar_tratamiento_asignado/{{id_paciente_tratamiento}}/{{paciente.numero_documento}}" class="btn btn-danger btnEliminacion">
                                                         <i class="bi-trash" ></i> 
                                                         Eliminar
                                                     </a>
@@ -100,7 +100,7 @@
                     </table>
                     <div class="d-flex justify-content-center">
                         {%if tratamientos_asignados%}
-                        <a type="submit" href="/administrativo/modificar_tratamiento_asignado/{{id_paciente}}" class="btn btn-primary btn-block txt-white">
+                        <a type="submit" href="/tratamiento/asignar_tratamientos/{{id_paciente}}" class="btn btn-primary btn-block txt-white">
                             <i class="bi bi-plus-circle"></i>
                             Agregar
                         </a>
@@ -111,7 +111,7 @@
                         </a>
                         {%endif%}
                         &nbsp;
-                        <a href="/tratamiento/listar_paciente2/" class="btn btn-secondary"  >
+                        <a onclick = "history.back()" class="btn btn-secondary"  >
                             <i class="bi-x-circle"></i> 
                             Atras
                         </a>
