--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -31,7 +31,7 @@
                         <td>
                            
                             {%if perms.gestion_agendamiento.view_cita%}
-                                <a href="/agendamiento/calendar" class="btn btn-info">
+                                <a href="/agendamiento/calendario_usuario" class="btn btn-info">
                                     <i class="bi bi-calendar"></i>
                                    Ver Calendario <br>
                                 </a>
