--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <center> 
                     <strong  style="color:blue; font-size:16px;" >
-                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> ¡Gracias por la preferencia! </h2>                                       
+                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> Cita del Paciente Modificada </h2>                                       
                     </strong>
                   
                 </center>
@@ -33,7 +33,7 @@
                         <td>
                            
                            
-                            <a href="/agendamiento/calendario_usuario" class="btn btn-info">
+                            <a href="/agendamiento/calendar" class="btn btn-info">
                                 <i class="bi bi-calendar"></i>
                                 Ver Calendario <br>
                             </a>
