--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/asignar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/asignar_tratamiento.html
@@ -34,10 +34,10 @@
                             <i class="bi-save"></i>
                             Guardar
                         </button>
-                        <!-- <a href="/roles/listar_roles/ " class="btn btn-danger" style="margin: 10px;">
+                        <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
-                            Cancelar
-                        </a> -->
+                            Atras
+                        </a>
                     </div>
                     <hr>
                 </form>
