Implementación correcta de Vista de Historial clinico de pacientes y de MI HISTORIAL CLINICO

--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
@@ -6,8 +6,8 @@
 			<div class="card-body">
 				<center>
                     <h2>
-                        <i class="bi-person-lines-fill">
-                            Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+                        <i class="bi bi-file-earmark-medical-fill"></i>
+                        Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
                         </i>
                     </h2> 
                 </center>
