--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -308,7 +308,8 @@
                                                   <!--Opcion 7.3 -->
                                                   
                                                     <strong class="dropdown-header"  style="color:blue; font-size:16px;" > Tratamientos Realizados</li></strong>
-                                                    <li><a class="dropdown-item" href="/historial_clinico/listar_pacientes_historial/">• Seleccionar un paciente</a></li> 
+                                                      <li><a class="dropdown-item" href="/historial_clinico/listar_pacientes_historial/">• Seleccionar un paciente</a></li>
+                                                      <li><a class="dropdown-item" href="/historial_clinico/ver_mi_historial_clinico/{{user.numero_documento}}">• Mi Historial clínico</a></li> 
                                                   {% comment %} <li><hr class="dropdown-divider"></li>
                                                   <li><a class="dropdown-item" href="#">• Asignar un Tratamiento</a></li> {% endcomment %}
                                                 </ul>
